CSS Fixes for Horizontal Scrolling of Existing Collections Names

--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -425,6 +425,7 @@ input {
 
 .existing-collections {
     display: flex;
+    overflow: auto;
 }
 
 .collection-name-container {
@@ -433,6 +434,10 @@ input {
     border-radius: 50px;
     background-color: rgb(239 236 236);
     cursor: pointer;
+}
+
+.collection-name {
+    width: max-content;
 }
 
 .existing-collections > p:last-child {
@@ -501,6 +506,14 @@ input {
         display: flex;
     }
 
+    .movie-container {
+        width: 90%;
+    }
+
+    .movie-image > img {
+        width: 100%;
+    }
+
     .search-input {
         font-size: 15px;
     }
@@ -529,11 +542,6 @@ input {
 
     .existing-collections-container {
         justify-content: flex-start;
-    }
-
-    .collection-name {
-        width: max-content;
-
     }
 }
 
